feat: Create, update get product, create update get products
